--- a/images/styles.css
+++ b/images/styles.css
@@ -5,18 +5,26 @@
     
 }
 
+main {
+    flex-grow: 1;
+    padding: 120px 1rem;
+}
+
+
 html, body {
     margin: 0;
     padding: 0;
-    min-height: 100;
+    min-height: 100%;
 }
 
 .nav ul {
     margin: 0;
+    padding-right: 40px;
 }
 
 .nav li {
     display: inline;
+    justify-content: space-around;
 }
 
 .nav a {
@@ -30,7 +38,7 @@ html, body {
     text-align: center;
     font-size: 1.1em;
     font-weight: lighter;
-    border-bottom: 1px solid rgba(255, 255, 255, .3)
+    border-bottom: 3px solid rgba(0, 0, 0, 0.3)
 }
 
 .main-nav li {
@@ -44,13 +52,45 @@ html, body {
 .main-header {
     background-color: rgba(0, 0, 0, .6);
     background-image: url("river-images/placid.jpg");
-    /* background-blend-mode: multiply; */
     background-size: cover;
     padding-bottom: 30px;
-    
+    top: 0;
+    position: fixed;
+    padding: 1rem;
+    width: 100%;
+    max-width: inherit;
 }
 
-.band-name {
+/* .store-img {
+    width: 25px;
+    height: 25px;
+} */
+
+
+.main-header2 {
+    background-color: rgba(0, 0, 0, .6);
+    background-image: url("river-images/placid.jpg");
+    background-size: cover;
+    padding-bottom: 30px;
+}
+
+.main-header3 {
+    background-color: rgba(0, 0, 0, .6);
+    background-image: url("river-images/placid.jpg");
+    background-size: cover;
+    padding-bottom: 30px;
+}
+
+.body1 {
+    background-image: url("https://nature.arizona.edu/sites/snre.arizona.edu/files/Watershed-Management-%26-Ecohydrology_marquee.jpg");
+    /* background-color: rgb(0, 0, 0); */
+    background-size: cover;
+    min-height: 100vh;
+    max-width: 100vw;
+    flex-grow: 1;
+    padding: 125px .02rem;
+}
+.our-name {
     text-align: center;
     margin: 0;
     font-size: 2em;
@@ -59,20 +99,21 @@ html, body {
     color: white;
 }
 
-.band-name-large {
+.our-name-large {
     font-size: 5em;
 }
 
-/* .content-section {
+.content-section {
     margin: 1em;
     
-} */
+} 
 
 .container {
     max-width: 900px;
     margin: 0 auto;
     padding: 0 1.5em;
-    min-height: 100%;
+    /* border: 3px solid black; */
+    
 }
 
 .container1 {
@@ -87,11 +128,7 @@ html, body {
 #sec1 {
     display: flex;
     justify-content: center;
-}
-
-
-.p1 {
-    padding-bottom: 120px;
+    right: 9px;
 }
 
 .about-image {
@@ -99,40 +136,18 @@ html, body {
     height: 400px;
     width: 400px;
     text-align: center;
-    /* display: flex; */
-    /* margin: 0 auto; */
-    /* max-width: 500px; */
-    /* margin: 1em; */
-    /* left: 450px; */
     justify-content: center;
 } 
-
- /* .main-header,
-.hfooter {
-    position: fixed;
-    padding: 1rem;
-    width: 100%;
-    max-width: inherit;
-} */
-
-/* .main-header {
-    top: 0;
-} */
-
-/* .main-footer {
-    bottom: 0;
-}    */
-
-
 
 .main-footer1 {
     background-color: #c48b1a;
     color: rgb(133, 100, 10);
     padding: .25em 0;
+    bottom: 0px;
+    margin-top: auto;
+    position: fixed;
     width: 100%;
     max-width: inherit;
-    bottom: 0px;
-    position: fixed;
 }
 
 .main-footer2 {
@@ -150,11 +165,7 @@ html, body {
     padding: .25em 0;
     width: 100%;
     max-width: inherit;
-    bottom: 0px;
 }
-
-
-
 
 .main-footer-container {
     display: flex;
@@ -179,21 +190,21 @@ html, body {
 .btn {
     text-align: center;
     vertical-align: middle;
-    padding: .67em .67em;
+    padding: .47em .47em;
     cursor: pointer;
     bottom: 5px;
 }
 
 .btn-primary {
-    color: white;
-    background-color: #56CCF2;
+    color: rgb(0, 0, 0);
+    background-color: #ffac38;
     border: none;
     border-radius: .3em;
     font-weight: bold;
 }
 
 .btn-primary:hover {
-    background-color: #2D9CDB;
+    background-color: #c58b0d;
 }
 
 .tour-row {
@@ -212,16 +223,16 @@ html, body {
 }
 
 .tour-date {
-    color: #555;
+    color: rgb(0, 0, 0);
     width: 11%;
     font-weight: bold;
 }
 
-.tour-city {
+.tour-days {
     width: 24%;
 }
 
-.tour-arena {
+.tour-location {
     width: 42%;
 }
 
@@ -229,8 +240,14 @@ html, body {
     max-width: 19%;
 }
 
+#trs {
+    text-align: center;
+}
+
 .shop-item {
     margin: 30px;
+    border:  5px solid black;
+    border-radius: 5%;
 }
 
 .shop-item-title {
@@ -239,7 +256,7 @@ html, body {
     text-align: center;
     font-weight: bold;
     font-size: 1.5em;
-    color: #333;
+    color: rgb(0, 0, 0);
     margin-bottom: 15px;
 }
 
@@ -255,7 +272,7 @@ html, body {
 
 .shop-item-price {
     flex-grow: 1;
-    color: #333;
+    color: rgb(0, 0, 0);
 }
 
 .shop-items {
@@ -267,7 +284,7 @@ html, body {
 .cart-header {
     font-weight: bold;
     font-size: 1.25em;
-    color: #333;
+    color: rgb(0, 0, 0);
 }
 
 .cart-column {
@@ -370,15 +387,18 @@ html, body {
 .p1 {
     font-size: x-large;
     font-weight: bolder;
+    text-align: justify;
 }
 
 .p2 {
     font-size: x-large;
     font-weight: bolder;
+    text-align: justify;
 }
 
 .p3 {
     font-size: x-large;
     font-weight: bolder;
+    text-align: justify;
 }
 
